[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/collectables/0/seed_final.png" type="Texture" id=1]
[ext_resource path="res://scripts/collectable.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/collectible/Goute/Goute_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/corps.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://button_theme.tres" type="Theme" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "+1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.189465, 1, 0.153893, 1 ),
"update": 0,
"values": [ Vector2( -13, -11 ), Vector2( -8, -22 ), Vector2( -8, -22 ), Vector2( -9.53674e-07, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 1.1, 1.1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -4.76044, 0.0, 0.0, 4.0 ]
}

[node name="Collectable" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.40625, 0.40625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 4.44
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 31.58
initial_velocity_random = 0.66

[node name="DeathparticlesTimer" type="Timer" parent="."]

[node name="son" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 23.0
rect_rotation = 4.0
rect_scale = Vector2( 1e-05, 1e-05 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.929412, 0.831373, 0.298039, 1 )
custom_fonts/font = SubResource( 2 )
text = "+1"

[node name="anim" type="AnimationPlayer" parent="."]
anims/+1 = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Collectable_body_entered"]
[connection signal="timeout" from="DeathparticlesTimer" to="." method="_on_DeathparticlesTimer_timeout"]
